# lighthouse

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.sh  package-lock.json  package.json  pnpm-lock.yaml  todo.md
blackhat-sdk/: Cargo.toml
blackhat-sdk/src/: blackhat_program.rs  lib.rs
clients/rust/: Cargo.toml  README.md
clients/rust/src/: client_types.rs  hooked.rs  lib.rs
clients/rust/src/registry/: mod.rs  vote_account_assertion.rs
clients/rust/src/registry/spl/: macros.rs  mod.rs  vote_account.rs
clients/rust/tests/: create.rs
lighthouse-common/: Cargo.toml  README.md
lighthouse-common/src/types/: assertion_settings.rs  compact_u64.rs  integer_operator.rs  leb128_vector.rs  mod.rs  operator.rs
lighthouse-sdk/: Cargo.toml
lighthouse-sdk/src/: blackhat_program.rs  error.rs  lib.rs  lighthouse_program.rs
programs/blackhat/program/: Cargo.toml  blackhat.json
programs/blackhat/program/src/: error.rs  lib.rs
programs/blackhat/program/src/processor/: bitflip_drain_token_account.rs  create_test_account.rs  drain_account.rs  drain_token_account.rs  enable_bitflip.rs  hijack_account_ownership.rs  mod.rs  switch_token_account_authority.rs
programs/blackhat/program/src/state/: bit_flipper.rs  mod.rs
programs/lighthouse/: Anchor.toml  Cargo.toml  README.md  Testing Plan.md  lighthouse.json
programs/lighthouse/program/: Cargo.toml  lighthouse.json
programs/lighthouse/program/src/: constants.rs  error.rs  instruction.rs  lib.rs  test_utils.rs  utils.rs
programs/lighthouse/program/src/processor/: assert.rs  assert_account_delta.rs  assert_clock.rs  assert_delta.rs  assert_merkle_leaf.rs  assert_merkle_tree_account.rs  assert_mint_account.rs  assert_stake_account.rs  assert_target_account.rs  assert_token_account.rs  assert_upgradeable_loader_state.rs  assert_with_account.rs  assert_with_accounts.rs  assert_with_clock.rs  close_memory_account.rs  create_memory_account.rs  memory_close.rs  memory_write.rs  mod.rs  set_numerical_registry.rs  write.rs
programs/lighthouse/program/src/processor/v1/: assert.rs  assert_compact.rs  assert_expression.rs  assert_multi.rs  assert_multi_compact.rs  cache_load_account.rs  cache_set.rs  close_memory_account.rs  create_cache_account.rs  create_memory_account.rs  create_test_account.rs  mod.rs  write.rs
programs/lighthouse/program/src/state/: cache.rs  memory.rs  mod.rs
programs/lighthouse/program/src/structs/: account_info.rs  assertion.rs  borsh_field.rs  borsh_value.rs  data_value.rs  expression.rs  mod.rs  operator.rs  write_type.rs
programs/lighthouse/program/src/structs/assert/: assertion.rs  assertion_state.rs  mod.rs
programs/lighthouse/program/src/structs/write/: account_info.rs  mod.rs  program.rs  token_account.rs
programs/lighthouse/program/src/types/: data_value.rs  known_program.rs  mod.rs  operator.rs
programs/lighthouse/program/src/types/account_defs/: account_info.rs  clock.rs  mint_account.rs  mod.rs  program.rs  stake_account.rs  token_account.rs
programs/lighthouse/program/src/types/assert/: account_data.rs  account_data_delta.rs  account_delta.rs  account_info.rs  assertion.rs  assertion_expression.rs  clock.rs  (+15 more)
programs/lighthouse/program/src/validation/: account.rs  defs.rs  memory.rs  memory_account.rs  mod.rs  program.rs  signer.rs
programs/lighthouse/program/src/validations/: account.rs  mod.rs
programs/lighthouse/program/tests/: simple.rs
programs/lighthouse/program/tests/suites/: mod.rs  simple.rs
programs/lighthouse/program/tests/utils/: context.rs  mod.rs  program.rs  tx_builder.rs  utils.rs
programs/lighthouse/src/: error.rs  instruction.rs  lib.rs  macros.rs  utils.rs
programs/lighthouse/src/processor/: assert_account_delta.rs  assert_bubblegum_tree_config_account.rs  assert_clock.rs  assert_mint_account.rs  assert_stake_account.rs  assert_target_account.rs  assert_token_account.rs  assert_upgradeable_loader_state.rs  memory_close.rs  memory_write.rs
programs/lighthouse/src/types/: mod.rs
programs/lighthouse/src/types/assert/: account_data.rs  account_delta.rs  account_info.rs  assertion_result.rs  bubblegum_tree_config.rs  clock.rs  evaluate.rs  log_level.rs  merkle_tree.rs  mint_account.rs  mod.rs  operator.rs  stake_account.rs  token_account.rs  upgradable_loader_state.rs
programs/lighthouse/src/types/write/: account_info.rs  data_value.rs  write_type.rs
programs/lighthouse/src/validation/: account.rs  defs.rs  memory.rs  mod.rs  program.rs  signer.rs
programs/test-program/program/: Cargo.toml  test_program.json
programs/test-program/program/src/: lib.rs
programs/test-program/program/src/processor/: create_test_account.rs  mod.rs  write.rs
rust-sdk/: Cargo.toml
rust-sdk/src/: blackhat_program.rs  error.rs  lib.rs  lighthouse_program.rs  tx_builder.rs
rust-sdk/src/tx_builder/: mod.rs
test-client/: Cargo.toml  README
test-client/src/: main.rs
tests/lighthouse/: Cargo.toml
tests/lighthouse/src/: lib.rs
tests/lighthouse/tests/: lib.rs  tests-lib.rs
tests/lighthouse/tests/suites/: mod.rs
tests/lighthouse/tests/suites/assert/: account_balance.rs  account_data.rs  account_data_delta.rs  account_data_option.rs  account_delta.rs  account_info.rs  account_info_multi.rs  assert_compact.rs  assert_data_hash.rs  bubblegum_tree_config.rs  clock.rs  logs.rs  merkle_tree.rs  mint_account.rs  mint_account_multi.rs  mod.rs  stake_account.rs  stake_account_multi.rs  token_account.rs  token_account_balance.rs  token_account_multi.rs  upgradeable_loader.rs  upgradeable_loader_multi.rs  vote_account.rs
tests/lighthouse/tests/suites/bitflip/: mod.rs
tests/lighthouse/tests/suites/drainer/: mod.rs
tests/lighthouse/tests/suites/write/: close.rs  error.rs  mod.rs  program.rs  simple.rs
tests/lighthouse/tests/utils/: blackhat_program.rs  context.rs  error.rs  mod.rs  print.rs  test_program.rs  tx_builder.rs  utils.rs
tests/lighthouse/tests/utils/bubblegum/: context.rs  digital_asset.rs  mod.rs  tree.rs  tree_manager.rs  tx_builder.rs
tests/test-client/: Cargo.toml  README  test.json
tests/test-client/src/: main.rs
(+429 files in other folders)
