[package]
name = "blackhat-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Jac0xb"]
description = "A test sdk to build transactions for blackhat program FOR TESTING PURPOSES ONLY"
repository = "https://github.com/Jac0xb/lighthouse"
license-file = "../LICENSE"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "~1.18.1"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
async-trait = "0.1.71"
solana-sdk = "~1.18.1"
blackhat = { path="../programs/blackhat/program", features = ["no-entrypoint"] }
lighthouse-sdk = { path="../lighthouse-sdk" }