[package]
name = "lighthouse-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Jac0xb"]
description = "A sdk to build transactions for lighthouse protocol"
repository = "https://github.com/Jac0xb/lighthouse"
license-file = "../LICENSE"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
num-traits = "0.2.15"
solana-program = "~1.18.1"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
async-trait = "0.1.71"
solana-sdk = "~1.18.1"
lighthouse = { version = "0.1.0", path="../programs/lighthouse/program" }
kaigan = "=0.2.4"