[package]
name = "lighthouse-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Jac0xb"]
description = "A sdk to build transactions for lighthouse protocol"
repository = "https://github.com/Jac0xb/lighthouse"
license-file = "../LICENSE"

[dependencies]
solana-program = "~1.18.1"
solana-sdk = "~1.18.1"
lighthouse = { version = "0.1.0", path="../programs/lighthouse/program" }
kaigan = "=0.2.4"
borsh = "^0.10.0"