[package]
name = "rust_sdk"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <youremail@example.com>"]
description = "A Rust SDK for something."
repository = "https://github.com/yourusername/rust_sdk"
license = "MIT OR Apache-2.0"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
bytemuck = {version = "1.4.0", features = ["derive", "min_const_generics"]}
num-traits = "0.2.15"
solana-program = "~1.18.1"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
async-trait = "0.1.71"
solana-program-test = "~1.18.1"
solana-sdk = "~1.18.1"
spl-concurrent-merkle-tree = "0.2.0"
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
solana-banks-interface = "1.14.10"
regex = "1.5.4"
lighthouse = { path="../programs/lighthouse/program", features = ['no-entrypoint'] }
blackhat = { path="../programs/blackhat/program", features = ["no-entrypoint"] }
