[package]
name = "lighthouse-sdk"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"
description = "A rust client for Lighthouse, a transaction safeguard Solana program"
repository = "https://github.com/Jac0xb/lighthouse"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["dep:serde", "dep:serde_with"]
cpi = []
sdk = ["dep:solana-sdk"]

default = []

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "1.17.23"
solana-sdk = { version = "1.17.23", optional = true }
thiserror = "^1.0"
base64 = "0.22.0"

[dev-dependencies]
assert_matches = "1.5.0"