[package]
name = "lighthouse_tests"
version = "0.0.1"
description = "Test suite for lighthouse program"
authors = ["Jac0xb"]
repository = "https://github.com/jac0xb/lighthouse"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.23"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
async-trait = "0.1.71"
solana-program-test = "1.17.23"
solana-sdk = "1.17.23"
solana-banks-interface = "1.14.10"
regex = "1.5.4"
test-program = { path = "../../programs/test-program/program", features = ["no-entrypoint"] }
blackhat = { path = "../../programs/blackhat/program", features = ["no-entrypoint"] }
lighthouse-client = { path = "../../clients/rust" }
solana-vote-program = "1.17.23"
rand = "0.8.4"
borsh = "^0.10.0"
solana-client = "1.17.23"
bincode = "1"
solana-loader-v4-program = "1.17.23"
mpl-bubblegum = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "bubblegum", features = ["test-sbf"] }
# mpl-bubblegum-client = { git = "https://github.com/Jac0xb/mpl-bubblegum.git", rev = "bf9a36d95d4b636c0f9346665cc744c9cf283b54", package = "mpl-bubblegum" }
spl-concurrent-merkle-tree = "0.2.0"
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
mpl-token-metadata = "3.2.3"
spl-account-compression = { version = "0.3.0", features = ["cpi"] }
bytemuck = "1.13.0"