[package]
name = "lighthaus-test-client"
version = "0.1.0"
edition = "2021"
authors = ["Jac0xb"]
description = "A simple CLI application to test lighthaus on Solana network"

# Define your dependencies here
[dependencies]
clap = { version = "^4.5.1", features = ["derive"] }
solana-sdk = "1.17.23"
lighthaus-sdk = { path = "../../clients/rust" }
serde_json = "1.0.114"
solana-program = "1.17.23"
solana-client = "1.17.23"
rayon = "1.8.1"
borsh = "^0.10.0"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
anchor-spl = "0.29.0"
bincode = "1"