[package]
name = "blackhat"
version = "0.0.1"
description = "blackhat"
authors = ["badmen"]
repository = "https://github.com/jac0xb/lighthouse"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "~1.16.5"

[dev-dependencies]
async-trait = "0.1.71"
solana-program-test = "~1.16.5"
solana-sdk = "~1.16.5"
spl-concurrent-merkle-tree = "0.2.0"
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
solana-banks-interface = "1.14.10"
regex = "1.5.4"