[package]
name = "lighthouse"
version = "0.1.0"
description = "Transaction guard rails"
authors = ["Jac0xb"]
repository = "https://github.com/jac0xb/lighthouse"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test-sbf = []
default = []

[dependencies]
thiserror = "=1.0.56"
shank = "=0.0.12"
anchor-spl = "=0.29.0"
solana-program = "=1.18.1"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
borsh = "^0.10.0"
bincode = "1.3.1"
bytemuck = "^1.14.0"
lib-sokoban = "=0.3.0" 
kaigan = "=0.2.4"
num-traits = "0.2.18"

[dev-dependencies]
blackhat = { path="../../blackhat/program", features = ["no-entrypoint"] }
solana-sdk = "~1.18.1"