[package]
name = "lighthouse"
version = "0.1.0"
description = "Transaction guard rails"
authors = ["Jac0xb"]
repository = "https://github.com/jac0xb/lighthouse"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
test-sbf = []
default = []

[dependencies]
thiserror = "=1.0.56"
shank = "=0.3.0"
solana-program = "=1.17.23"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
spl-token = { version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=2.0.1", features = [ "no-entrypoint" ] }
borsh = "=0.10.3"
bincode = "=1.3.3"
bytemuck = "=1.14.3"
lib-sokoban = "=0.3.0" 
num-traits = "=0.2.18"
sha2-const-stable = "=0.1.0"

[dev-dependencies]
test-program = { path = "../../test-program/program", features = ["no-entrypoint"] }
solana-sdk = "=1.17.23"
solana-program-test = "=1.17.23"