[package]
name = "test-program"
version = "0.0.1"
description = "test-program"
authors = ["badmen"]
repository = "https://github.com/jac0xb/lighthouse"
license-file = "../../../LICENSE"
edition = "2021"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []
rc = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.23"
arrayref = "0.3.7"
lighthouse-client = { version = "0.1.0", path = "../../../clients/rust", features = ["cpi"] }

[dev-dependencies]
async-trait = "0.1.71"
solana-program-test = "1.17.23"
solana-sdk = "1.17.23"
spl-concurrent-merkle-tree = "0.2.0"
spl-merkle-tree-reference = "0.1.0"
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }
solana-banks-interface = "1.14.10"
regex = "1.5.4"